Fixing alignment

--- a/web/src/components/CalendarDay.css
+++ b/web/src/components/CalendarDay.css
@@ -5,7 +5,7 @@
 
     padding: 0.2rem;
     height: 8rem;
-    width: 11rem;
+    width: 12rem;
 
     overflow: scroll;
 }
